# MHChatbot

./: .gitignore  README.md  netlify.toml  package-lock.json  package.json  requirements.txt  vercel.json
api/: index.py
api/app/auth/: __init__.py  auth.py
api/app/config/: __init__.py  config.py
api/app/models/: __init__.py  history.py  users.py
api/app/modules/: chatbotllm.py
api/app/routers/: solutions.py  users.py
api/app/utils/: get_embedding_openai.py
api/tests/: conftest.py
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/auth/: __init__.py
backend/app/config/: config.py
backend/app/modules/: semanticsearch.py
backend/app/routers/: api.py  login.py  solutions.py  users.py
backend/app/utils/: processor_HOPE_data.py  processor_conversationDB.py  processor_suicide-prevention.py
backend/tests/: conftest.py  vector_test.ipynb
frontend/: .env.development  package-lock.json  package.json  vite.config.ts
frontend/src/routes/: mlclassification.tsx
