[tool.poetry]
name = "MHChatbot"
version = "1.0.0"
description = "Mental Health Chatbot"
authors = ["Sidney Parker <sidneyparker729@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]
[tool.poetry.dependencies]
python = "3.10.10"
asgi-lifespan = "2.1.0"
beanie = "1.27.0"
fastapi = "0.115.6"
python-jose = "3.3.0"
langchain-core = "0.3.21"
langchain-openai = "0.2.11"
langgraph = "0.2.54"
openai = "1.56.1"
passlib = "1.7.4"
pydantic = {version = "2.10.3", extras = ["email"]}
pydantic-settings = "2.6.1"
psycopg2-binary = "2.9.9"
pandas = "2.2.3"
starlette = "0.41.3"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
python-dotenv = "1.0.1"
uvicorn = "^0.23.2"
sqlalchemy = "2.0.36"
asyncpg = "0.30.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pre-commit = "^3.5.0"
httpx = "0.28.0"
pytest = "8.3.4"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
